kube-elk-filebeat/kubefiles/filebeat-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: filebeat
  labels:
    app: filebeat
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: filebeat
      name: filebeat
    spec:
      containers:
      - name: filebeat
        image: komljen/filebeat
        resources:
          limits:
            cpu: 50m
        volumeMounts:
        - name: config
          mountPath: /etc/filebeat
        - name: varlog
          mountPath: /etc/log
          readOnly: true
      terminationGracePeriodSeconds: 30
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: config
        configMap:
          name: filebeat-config
          items:
          - key: filebeat.yml
            path: filebeat.yml
