kube-elk-filebeat/kubefiles/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  backend:
    serviceName: kibana
    servicePort: 5601
